--- a/src/main/resources/com/cloudbees/jenkins/plugins/freeplugins/Messages.properties
+++ b/src/main/resources/com/cloudbees/jenkins/plugins/freeplugins/Messages.properties
@@ -21,13 +21,4 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
 #
-PluginImpl.addUpdateCenter Validating CloudBees Update Center configuration
-PluginImpl.installCorePlugins Validating CloudBees Core Plugins installation
-
-Notice.downloadUCMetadata Waiting to download the CloudBees Update Center metadata...
-Notice.installingPlugin Installing {0}...
-Notice.installedPlugin {0} installed.
-Notice.upgradingPlugin Upgrading {0} to {1}...
-Notice.upgradedPlugin {0} upgraded to {1}.
-Notice.scheduledRestart Safe restart scheduled...
-Notice.restartRequired A restart required to activate the CloudBees plugins.
+PluginImpl.removeUpdateCenter Cleaning up CloudBees Update Center configuration
